# py-radiometric-corrections

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  correct_images_dir.spec  correct_images_onefile.spec  environment.yml  get_corrections_dir.spec  get_corrections_onefile.spec  pull_request_template.md  pyproject.toml  setup.py  zenith_co.csv
.github/workflows/: lint-test.yaml  main-branch.yaml
cfg/: exiftool.cfg  reg_config.ini
correct6x/: __init__.py  cli.py  compute_corrections.py  corrections.py  detect_panel.py  io.py  metadata.py  sensor_defs.py
corrections/: detect_panel.py
imgcorrect/: __init__.py  _version.py  corrections.py  detect_panel.py  io.py  metadata.py  sensor_defs.py  thermal_convert.py  zenith_co.py
scripts/: correct_6x_images.py  correct_ils_6x_images.py  correct_images.py  correct_reflectance_6x_images.py  get_corrections.py
tests/: test_corrections.py
tests/d4k_images/: System.conf  info.txt  mavlink-gps.csv  session.txt  system.info
tests/d4k_images/NDRE/: Imager.conf  analytics_log.txt  firmware-version.txt  fs-version.txt  ils.csv  image-metadata.txt  jpegs.csv  pix4d.csv  system.info
tests/d4k_images/nRGB/: Imager.conf  image-metadata.txt  jpegs.csv  pix4d.csv  system.info
