[tool.poetry]
name = "imgcorrect"
version = "1.3.1"
description = "Library to perform various corrections on imagery from supported sensors"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^8.1.2"
numpy = "^1.20.1"
tifffile = "^2021.3.16"
pandas = "^1.2.3"
tqdm = "^4.59.0"
imgparse = {git = "https://github.com/SenteraLLC/py-image-metadata-parser.git", tag = "v1.10.5"}
imgreg = {git = "https://github.com/SenteraLLC/py-image-registration.git", tag = "v1.1.1"}
opencv-contrib-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
