[tool.poetry]
name = "imgcorrect"
version = "1.4.7"
description = "Library to perform various corrections on imagery from supported sensors"
authors = ["Samuel Williams <sam.williams@sentera.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.1"
numpy = "^1.19.3"
tifffile = "^2021.3.16"
pandas = "^1.2.3"
tqdm = "^4.59.0"
opencv-contrib-python = "^4.5.1"
imgparse = {git = "https://github.com/SenteraLLC/py-image-metadata-parser.git", tag = "v1.12.4"}
imageio = "^2.19.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
